log
Sat Apr 23 11:52:07 HSP 2022: 
 treemap.c | 34 +++++++++++++++++++++++++++++++---
 1 file changed, 31 insertions(+), 3 deletions(-)
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
560e132
Sat Apr 23 11:58:13 HSP 2022: 
 tests:  13|5
total_score: 25/70
6aa7907
Sat Apr 23 12:02:41 HSP 2022: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
4cbdad4
Sat Apr 23 12:16:55 HSP 2022: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
2a5631d
Sat Apr 23 12:21:23 HSP 2022: 
 treemap.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
 tests:  0|0
a2f1c6e
Sat Apr 23 12:28:07 HSP 2022: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function 'removeNode':
treemap.c:91:47: error: expected ';' before '}' token
             node->right->parent = node->parent
                                               ^
                                               ;
         }
         ~                                      
treemap.c:95:46: error: expected ';' before '}' token
             node->left->parent = node->parent
                                              ^
                                              ;
         }
         ~                                     
treemap.c:101:46: error: expected ';' before '}' token
             node->left->parent = node->parent
                                              ^
                                              ;
         }
         ~                                     
treemap.c:105:47: error: expected ';' before '}' token
             node->right->parent = node->parent
                                               ^
                                               ;
         }
         ~                                      
Compilation failed
8e24f8d
Sat Apr 23 12:28:32 HSP 2022: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
a312c65
Sat Apr 23 18:30:27 UTC 2022: 
test.c: In function ‘creaPalabra’:
test.c:47:17: error: implicit declaration of function ‘_strdup’; did you mean ‘strdup’? [-Werror=implicit-function-declaration]
     new->word = _strdup(word);
                 ^~~~~~~
                 strdup
test.c:47:15: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     new->word = _strdup(word);
               ^
test.c: In function ‘insert_test1’:
test.c:174:35: error: passing argument 2 of ‘creaPalabra’ makes pointer from integer without a cast [-Werror=int-conversion]
     Palabra* p = creaPalabra(1273,_strdup("repetido"));
                                   ^~~~~~~
test.c:44:10: note: expected ‘char *’ but argument is of type ‘int’
 Palabra* creaPalabra(int id, char* word){
          ^~~~~~~~~~~
test.c: In function ‘insert_test2’:
test.c:190:34: error: passing argument 2 of ‘creaPalabra’ makes pointer from integer without a cast [-Werror=int-conversion]
     Palabra* p = creaPalabra(900,_strdup("maicol"));
                                  ^~~~~~~
test.c:44:10: note: expected ‘char *’ but argument is of type ‘int’
 Palabra* creaPalabra(int id, char* word){
          ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1a7d280
Sat Apr 23 18:30:45 UTC 2022: 
test.c: In function ‘creaPalabra’:
test.c:47:17: error: implicit declaration of function ‘_strdup’; did you mean ‘strdup’? [-Werror=implicit-function-declaration]
     new->word = _strdup(word);
                 ^~~~~~~
                 strdup
test.c:47:15: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     new->word = _strdup(word);
               ^
test.c: In function ‘insert_test1’:
test.c:174:35: error: passing argument 2 of ‘creaPalabra’ makes pointer from integer without a cast [-Werror=int-conversion]
     Palabra* p = creaPalabra(1273,_strdup("repetido"));
                                   ^~~~~~~
test.c:44:10: note: expected ‘char *’ but argument is of type ‘int’
 Palabra* creaPalabra(int id, char* word){
          ^~~~~~~~~~~
test.c: In function ‘insert_test2’:
test.c:190:34: error: passing argument 2 of ‘creaPalabra’ makes pointer from integer without a cast [-Werror=int-conversion]
     Palabra* p = creaPalabra(900,_strdup("maicol"));
                                  ^~~~~~~
test.c:44:10: note: expected ‘char *’ but argument is of type ‘int’
 Palabra* creaPalabra(int id, char* word){
          ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6140134
Sat Apr 23 18:30:56 UTC 2022: 
test.c: In function ‘creaPalabra’:
test.c:47:17: error: implicit declaration of function ‘_strdup’; did you mean ‘strdup’? [-Werror=implicit-function-declaration]
     new->word = _strdup(word);
                 ^~~~~~~
                 strdup
test.c:47:15: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     new->word = _strdup(word);
               ^
test.c: In function ‘insert_test1’:
test.c:174:35: error: passing argument 2 of ‘creaPalabra’ makes pointer from integer without a cast [-Werror=int-conversion]
     Palabra* p = creaPalabra(1273,_strdup("repetido"));
                                   ^~~~~~~
test.c:44:10: note: expected ‘char *’ but argument is of type ‘int’
 Palabra* creaPalabra(int id, char* word){
          ^~~~~~~~~~~
test.c: In function ‘insert_test2’:
test.c:190:34: error: passing argument 2 of ‘creaPalabra’ makes pointer from integer without a cast [-Werror=int-conversion]
     Palabra* p = creaPalabra(900,_strdup("maicol"));
                                  ^~~~~~~
test.c:44:10: note: expected ‘char *’ but argument is of type ‘int’
 Palabra* creaPalabra(int id, char* word){
          ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
727fd48
Sat Apr 23 18:31:53 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘creaPalabra’:
test.c:47:17: error: implicit declaration of function ‘_strdup’; did you mean ‘strdup’? [-Werror=implicit-function-declaration]
     new->word = _strdup(word);
                 ^~~~~~~
                 strdup
test.c:47:15: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     new->word = _strdup(word);
               ^
test.c: In function ‘insert_test1’:
test.c:174:35: error: passing argument 2 of ‘creaPalabra’ makes pointer from integer without a cast [-Werror=int-conversion]
     Palabra* p = creaPalabra(1273,_strdup("repetido"));
                                   ^~~~~~~
test.c:44:10: note: expected ‘char *’ but argument is of type ‘int’
 Palabra* creaPalabra(int id, char* word){
          ^~~~~~~~~~~
test.c: In function ‘insert_test2’:
test.c:190:34: error: passing argument 2 of ‘creaPalabra’ makes pointer from integer without a cast [-Werror=int-conversion]
     Palabra* p = creaPalabra(900,_strdup("maicol"));
                                  ^~~~~~~
test.c:44:10: note: expected ‘char *’ but argument is of type ‘int’
 Palabra* creaPalabra(int id, char* word){
          ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
88bab2d
Sat Apr 23 18:42:10 UTC 2022: 
 tests:  0|0
1a82df8
Sat Apr 23 18:43:40 UTC 2022: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
048b531
